--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -14,3 +14,12 @@
   margin-top: 5px !important;
   margin-bottom: 5px !important;
 }
+
+@media (max-width: 770px) {
+
+  .form {
+    max-width: 80%;
+    margin: 5%;
+  }
+
+}
